// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Nags /> should match snapshot and have correct elements and children for empty nag list 1`] = `
.c0 {
  margin-bottom: 20px;
  margin-top: 20px;
  text-align: center;
}

.c0 h3 {
  margin-bottom: 1rem;
}

.c1 {
  font-size: 1.2rem;
  margin-top: 0.35rem;
  margin-bottom: 0.35rem;
}

.c2 {
  border: 1px solid props => props.theme.mainDarken;
  cursor: pointer;
  display: inline-block;
  padding: 0 .75rem;
  box-sizing: border-box;
  font-size: 0.85rem;
  line-height: 2rem;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-transition-duration: 0.5s;
  transition-duration: 0.5s;
  -webkit-transition-property: background-color;
  transition-property: background-color;
}

.c10 {
  border: 1px solid props => props.theme.mainDarken;
  cursor: pointer;
  display: inline-block;
  padding: 0;
  box-sizing: border-box;
  font-size: 0.85rem;
  line-height: 2rem;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-transition-duration: 0.5s;
  transition-duration: 0.5s;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  border-radius: 50%;
  height: 2rem;
  text-align: center;
  width: 2rem;
}

.c10 i {
  position: relative;
  top: 2px;
}

.c3 {
  border-top: 1px solid;
  margin-top: 20px;
  padding-top: 10px;
  text-align: center;
}

.c4 {
  font-size: 1rem;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
}

.c5 {
  list-style-type: none;
  margin: 0;
  overflow: hidden;
  padding: 0.5rem 0.5rem 1rem;
}

.c6 {
  border-radius: 4px;
  box-shadow: 0 0 2px rgba(0,0,0,0.25);
  margin-bottom: 0.5rem;
  padding: 10px;
  padding-right: 50px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: left;
}

.c6:last-child {
  margin-bottom: 0;
}

.c7 {
  font-size: 0.95rem;
  margin-top: 0.15rem;
  margin-bottom: 0.15rem;
}

.c8 {
  font-size: 0.8rem;
  margin: 5px 0 0;
}

.c9 {
  bottom: 0;
  position: absolute;
  right: 10px;
  top: 10px;
}

.c11 {
  color: undefined;
  font-family: icons;
  font-size: 1rem;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  speak: none;
  text-transform: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c11:before {
  content: "\\ea09";
}

<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Nags
    nagDelete={[Function]}
    nagEdit={[Function]}
    nagNew={[Function]}
    nagPause={[Function]}
    nagResume={[Function]}
    nagStatusUpdate={[Function]}
    nags={Array []}
  >
    <styled.div>
      <div
        className="c0"
      >
        <Component>
          <styled.h3>
            <h3
              className="c1"
            >
              Nothing to nag about
            </h3>
          </styled.h3>
        </Component>
        <Component
          onClick={[Function]}
        >
          <styled.button
            onClick={[Function]}
          >
            <button
              className="c2"
              onClick={[Function]}
            >
              Create your first Nag
            </button>
          </styled.button>
        </Component>
        <Connect(NagForm)>
          <NagForm
            nagCreate={[Function]}
          >
            <div>
              <styled.div>
                <div
                  className="c3"
                >
                  <Component>
                    <styled.h5>
                      <h5
                        className="c4"
                      >
                        Or try the nags below
                      </h5>
                    </styled.h5>
                  </Component>
                </div>
              </styled.div>
              <StaggeredMotion
                defaultStyles={
                  Array [
                    Object {
                      "t": 100,
                    },
                    Object {
                      "t": 100,
                    },
                    Object {
                      "t": 100,
                    },
                    Object {
                      "t": 100,
                    },
                    Object {
                      "t": 100,
                    },
                  ]
                }
                styles={[Function]}
              >
                <styled.ul>
                  <ul
                    className="c5"
                  >
                    <styled.li
                      key="1"
                      style={
                        Object {
                          "WebkitTransform": "translateY(100px)",
                          "transform": "translateY(100px)",
                        }
                      }
                    >
                      <li
                        className="c6"
                        style={
                          Object {
                            "WebkitTransform": "translateY(100px)",
                            "transform": "translateY(100px)",
                          }
                        }
                      >
                        <Component>
                          <styled.h6>
                            <h6
                              className="c7"
                            >
                              Drink water
                            </h6>
                          </styled.h6>
                        </Component>
                        <styled.p>
                          <p
                            className="c8"
                          >
                            repeats every 
                            20 min
                          </p>
                        </styled.p>
                        <styled.div>
                          <div
                            className="c9"
                          >
                            <Component
                              circle={true}
                              onClick={[Function]}
                              title="Start this nag"
                            >
                              <styled.button
                                circle={true}
                                onClick={[Function]}
                                title="Start this nag"
                              >
                                <button
                                  className="c10"
                                  onClick={[Function]}
                                  title="Start this nag"
                                >
                                  <Component
                                    add={true}
                                    inverse={true}
                                  >
                                    <styled.i
                                      add={true}
                                      inverse={true}
                                    >
                                      <i
                                        className="c11"
                                      />
                                    </styled.i>
                                  </Component>
                                </button>
                              </styled.button>
                            </Component>
                          </div>
                        </styled.div>
                      </li>
                    </styled.li>
                    <styled.li
                      key="2"
                      style={
                        Object {
                          "WebkitTransform": "translateY(100px)",
                          "transform": "translateY(100px)",
                        }
                      }
                    >
                      <li
                        className="c6"
                        style={
                          Object {
                            "WebkitTransform": "translateY(100px)",
                            "transform": "translateY(100px)",
                          }
                        }
                      >
                        <Component>
                          <styled.h6>
                            <h6
                              className="c7"
                            >
                              Relax your eyes
                            </h6>
                          </styled.h6>
                        </Component>
                        <styled.p>
                          <p
                            className="c8"
                          >
                            repeats every 
                            30 min
                          </p>
                        </styled.p>
                        <styled.div>
                          <div
                            className="c9"
                          >
                            <Component
                              circle={true}
                              onClick={[Function]}
                              title="Start this nag"
                            >
                              <styled.button
                                circle={true}
                                onClick={[Function]}
                                title="Start this nag"
                              >
                                <button
                                  className="c10"
                                  onClick={[Function]}
                                  title="Start this nag"
                                >
                                  <Component
                                    add={true}
                                    inverse={true}
                                  >
                                    <styled.i
                                      add={true}
                                      inverse={true}
                                    >
                                      <i
                                        className="c11"
                                      />
                                    </styled.i>
                                  </Component>
                                </button>
                              </styled.button>
                            </Component>
                          </div>
                        </styled.div>
                      </li>
                    </styled.li>
                    <styled.li
                      key="3"
                      style={
                        Object {
                          "WebkitTransform": "translateY(100px)",
                          "transform": "translateY(100px)",
                        }
                      }
                    >
                      <li
                        className="c6"
                        style={
                          Object {
                            "WebkitTransform": "translateY(100px)",
                            "transform": "translateY(100px)",
                          }
                        }
                      >
                        <Component>
                          <styled.h6>
                            <h6
                              className="c7"
                            >
                              Take a deep breath
                            </h6>
                          </styled.h6>
                        </Component>
                        <styled.p>
                          <p
                            className="c8"
                          >
                            repeats every 
                            1 hour
                          </p>
                        </styled.p>
                        <styled.div>
                          <div
                            className="c9"
                          >
                            <Component
                              circle={true}
                              onClick={[Function]}
                              title="Start this nag"
                            >
                              <styled.button
                                circle={true}
                                onClick={[Function]}
                                title="Start this nag"
                              >
                                <button
                                  className="c10"
                                  onClick={[Function]}
                                  title="Start this nag"
                                >
                                  <Component
                                    add={true}
                                    inverse={true}
                                  >
                                    <styled.i
                                      add={true}
                                      inverse={true}
                                    >
                                      <i
                                        className="c11"
                                      />
                                    </styled.i>
                                  </Component>
                                </button>
                              </styled.button>
                            </Component>
                          </div>
                        </styled.div>
                      </li>
                    </styled.li>
                    <styled.li
                      key="4"
                      style={
                        Object {
                          "WebkitTransform": "translateY(100px)",
                          "transform": "translateY(100px)",
                        }
                      }
                    >
                      <li
                        className="c6"
                        style={
                          Object {
                            "WebkitTransform": "translateY(100px)",
                            "transform": "translateY(100px)",
                          }
                        }
                      >
                        <Component>
                          <styled.h6>
                            <h6
                              className="c7"
                            >
                              Remember to smile
                            </h6>
                          </styled.h6>
                        </Component>
                        <styled.p>
                          <p
                            className="c8"
                          >
                            repeats every 
                            4 hour
                          </p>
                        </styled.p>
                        <styled.div>
                          <div
                            className="c9"
                          >
                            <Component
                              circle={true}
                              onClick={[Function]}
                              title="Start this nag"
                            >
                              <styled.button
                                circle={true}
                                onClick={[Function]}
                                title="Start this nag"
                              >
                                <button
                                  className="c10"
                                  onClick={[Function]}
                                  title="Start this nag"
                                >
                                  <Component
                                    add={true}
                                    inverse={true}
                                  >
                                    <styled.i
                                      add={true}
                                      inverse={true}
                                    >
                                      <i
                                        className="c11"
                                      />
                                    </styled.i>
                                  </Component>
                                </button>
                              </styled.button>
                            </Component>
                          </div>
                        </styled.div>
                      </li>
                    </styled.li>
                    <styled.li
                      key="5"
                      style={
                        Object {
                          "WebkitTransform": "translateY(100px)",
                          "transform": "translateY(100px)",
                        }
                      }
                    >
                      <li
                        className="c6"
                        style={
                          Object {
                            "WebkitTransform": "translateY(100px)",
                            "transform": "translateY(100px)",
                          }
                        }
                      >
                        <Component>
                          <styled.h6>
                            <h6
                              className="c7"
                            >
                              Go for a walk
                            </h6>
                          </styled.h6>
                        </Component>
                        <styled.p>
                          <p
                            className="c8"
                          >
                            repeats every 
                            8 hour
                          </p>
                        </styled.p>
                        <styled.div>
                          <div
                            className="c9"
                          >
                            <Component
                              circle={true}
                              onClick={[Function]}
                              title="Start this nag"
                            >
                              <styled.button
                                circle={true}
                                onClick={[Function]}
                                title="Start this nag"
                              >
                                <button
                                  className="c10"
                                  onClick={[Function]}
                                  title="Start this nag"
                                >
                                  <Component
                                    add={true}
                                    inverse={true}
                                  >
                                    <styled.i
                                      add={true}
                                      inverse={true}
                                    >
                                      <i
                                        className="c11"
                                      />
                                    </styled.i>
                                  </Component>
                                </button>
                              </styled.button>
                            </Component>
                          </div>
                        </styled.div>
                      </li>
                    </styled.li>
                  </ul>
                </styled.ul>
              </StaggeredMotion>
            </div>
          </NagForm>
        </Connect(NagForm)>
      </div>
    </styled.div>
  </Nags>
</Provider>
`;

exports[`<Nags /> should match snapshot and have correct elements and children for nag list 1`] = `
.c17 {
  border: 1px solid props => props.theme.mainDarken;
  cursor: pointer;
  display: inline-block;
  padding: 0;
  box-sizing: border-box;
  font-size: 0.85rem;
  line-height: 2rem;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-transition-duration: 0.5s;
  transition-duration: 0.5s;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  border-radius: 50%;
  height: 2rem;
  text-align: center;
  width: 2rem;
}

.c17 i {
  position: relative;
  top: 2px;
}

.c18 {
  font-family: icons;
  font-size: 1rem;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  speak: none;
  text-transform: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c18:before {
  content: "\\e906";
}

.c20 {
  font-family: icons;
  font-size: 1rem;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  speak: none;
  text-transform: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c20:before {
  content: "\\e9ac";
}

.c22 {
  font-family: icons;
  font-size: 1rem;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  speak: none;
  text-transform: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c22:before {
  content: "\\ea1d";
}

.c25 {
  font-family: icons;
  font-size: 1rem;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  speak: none;
  text-transform: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c25:before {
  content: "\\ea1c";
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 5px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c2 {
  position: relative;
}

.c2 input {
  padding-left: 20px;
}

.c2:before {
  content: '\\e986';
  font-family: icons;
  font-size: 0.5rem;
  left: 7px;
  position: absolute;
  top: 7px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  border: 1px solid;
  border-radius: 5px;
  box-sizing: border-box;
  font-size: .85rem;
  height: 1.5rem;
  padding: 0 0.35rem;
  width: 100%;
}

.c5 {
  margin-left: 5px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7 {
  font-size: .8rem;
  line-height: 1.5rem;
  margin-right: 5px;
}

.c8 {
  border: 1px solid;
  box-sizing: border-box;
  font-size: .85rem;
  height: 1.5rem;
  margin-top: 0;
  margin-bottom: 0;
}

.c9 {
  list-style-type: none;
  margin: 0;
  overflow: hidden;
  padding: 0.5rem;
  will-change: transform;
}

.c10 {
  cursor: pointer;
  margin-bottom: 0.5rem;
  position: relative;
}

.c10:last-child {
  margin-bottom: 0;
}

.c11 {
  background-color: #ffffff;
  border-radius: 4px;
  box-shadow: 0 0 2px rgba(0,0,0,0.25);
  padding: 10px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  will-change: transform;
  border-bottom: 3px solid undefined;
}

.c23 {
  border-radius: 4px;
  box-shadow: 0 0 2px rgba(0,0,0,0.25);
  padding: 10px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  will-change: transform;
}

.c12 {
  font-size: 1.2rem;
  margin: 0;
}

.c13 {
  font-size: 0.85rem;
  margin-bottom: 0;
  margin-top: 5px;
}

.c14 {
  font-size: 0.75rem;
  margin-bottom: 0;
  margin-top: 5px;
}

.c15 {
  border-top: 3px solid #6e8ea1;
  border-radius: 0 0 3px 3px;
  bottom: -3px;
  left: 0;
  position: absolute;
  -webkit-transition: width 1s;
  transition: width 1s;
  will-change: width;
}

.c16 {
  position: absolute;
  right: -45px;
  top: 50%;
  will-change: transform;
}

.c19 {
  position: absolute;
  right: -85px;
  top: 50%;
  will-change: transform;
}

.c21 {
  position: absolute;
  right: -125px;
  top: 50%;
  will-change: transform;
}

.c24 {
  font-size: 0.85rem;
  font-weight: bold;
  margin-bottom: 0;
  margin-top: 5px;
}

<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Nags
    nagDelete={[Function]}
    nagEdit={[Function]}
    nagNew={[Function]}
    nagPause={[Function]}
    nagResume={[Function]}
    nagStatusUpdate={[Function]}
    nags={
      Array [
        Object {
          "createdAt": 1234567890,
          "firstNag": 1234567890,
          "id": 1,
          "nextNag": 1234567890,
          "repeats": "1 min",
          "status": "LIVE",
          "title": "Test Nag 1",
        },
        Object {
          "createdAt": 1234567890,
          "firstNag": 1234567890,
          "id": 2,
          "nextNag": 1234567890,
          "repeats": "10 min",
          "status": "PAUSED",
          "title": "Test Nag 2",
        },
      ]
    }
  >
    <div>
      <Connect(SearchSort)>
        <SearchSort
          nagsSearch={[Function]}
          nagsSort={[Function]}
        >
          <styled.div>
            <div
              className="c0"
            >
              <styled.div>
                <div
                  className="c1"
                >
                  <Component
                    name="query"
                    onChange={[Function]}
                    value=""
                  >
                    <styled.div>
                      <div
                        className="c2"
                      >
                        <Component
                          name="query"
                          onChange={[Function]}
                          placeholder="Search"
                          small={true}
                          type="search"
                          value=""
                        >
                          <styled.div
                            name="query"
                            onChange={[Function]}
                            placeholder="Search"
                            small={true}
                            type="search"
                            value=""
                          >
                            <div
                              className="c3"
                              name="query"
                              onChange={[Function]}
                              placeholder="Search"
                              type="search"
                              value=""
                            >
                              <styled.input
                                name="query"
                                onChange={[Function]}
                                placeholder="Search"
                                small={true}
                                type="search"
                                value=""
                              >
                                <input
                                  className="c4"
                                  name="query"
                                  onChange={[Function]}
                                  placeholder="Search"
                                  type="search"
                                  value=""
                                />
                              </styled.input>
                            </div>
                          </styled.div>
                        </Component>
                      </div>
                    </styled.div>
                  </Component>
                </div>
              </styled.div>
              <styled.div>
                <div
                  className="c5"
                >
                  <Component
                    id="nags_sort"
                    inline={true}
                    label="Sort By"
                    name="sortBy"
                    onChange={[Function]}
                    small={true}
                    value=""
                  >
                    <styled.div
                      inline={true}
                      name="sortBy"
                      onChange={[Function]}
                      small={true}
                      value=""
                    >
                      <div
                        className="c6"
                        name="sortBy"
                        onChange={[Function]}
                        value=""
                      >
                        <Component
                          htmlFor="nags_sort"
                          inline={true}
                          name="sortBy"
                          onChange={[Function]}
                          small={true}
                          value=""
                        >
                          <styled.label
                            htmlFor="nags_sort"
                            inline={true}
                            name="sortBy"
                            onChange={[Function]}
                            small={true}
                            value=""
                          >
                            <label
                              className="c7"
                              htmlFor="nags_sort"
                              name="sortBy"
                              onChange={[Function]}
                              value=""
                            >
                              Sort By
                            </label>
                          </styled.label>
                        </Component>
                        <styled.select
                          id="nags_sort"
                          inline={true}
                          name="sortBy"
                          onChange={[Function]}
                          small={true}
                          value=""
                        >
                          <select
                            className="c8"
                            id="nags_sort"
                            name="sortBy"
                            onChange={[Function]}
                            value=""
                          >
                            <option
                              value="nextNag"
                            >
                              Next Nag
                            </option>
                            <option
                              value="lastNag"
                            >
                              Last Nag
                            </option>
                            <option
                              value="AZ"
                            >
                              A-Z
                            </option>
                            <option
                              value="ZA"
                            >
                              Z-A
                            </option>
                            <option
                              value="latest"
                            >
                              Latest First
                            </option>
                            <option
                              value="oldest"
                            >
                              Oldest First
                            </option>
                          </select>
                        </styled.select>
                      </div>
                    </styled.div>
                  </Component>
                </div>
              </styled.div>
            </div>
          </styled.div>
        </SearchSort>
      </Connect(SearchSort)>
      <StaggeredMotion
        defaultStyles={
          Array [
            Object {
              "t": 100,
            },
            Object {
              "t": 100,
            },
          ]
        }
        styles={[Function]}
      >
        <styled.ul>
          <ul
            className="c9"
          >
            <styled.li
              key="1"
              style={
                Object {
                  "WebkitTransform": "translateY(100px)",
                  "transform": "translateY(100px)",
                }
              }
            >
              <li
                className="c10"
                style={
                  Object {
                    "WebkitTransform": "translateY(100px)",
                    "transform": "translateY(100px)",
                  }
                }
              >
                <Nag
                  nag={
                    Object {
                      "createdAt": 1234567890,
                      "firstNag": 1234567890,
                      "id": 1,
                      "nextNag": 1234567890,
                      "repeats": "1 min",
                      "status": "LIVE",
                      "title": "Test Nag 1",
                    }
                  }
                  nagDelete={[Function]}
                  nagEdit={[Function]}
                  nagPause={[Function]}
                  nagResume={[Function]}
                  nagStatusUpdate={[Function]}
                >
                  <StaggeredMotion
                    defaultStyles={
                      Array [
                        Object {
                          "t": 0,
                        },
                        Object {
                          "t": 0,
                        },
                        Object {
                          "t": 0,
                        },
                        Object {
                          "t": 0,
                        },
                      ]
                    }
                    styles={[Function]}
                  >
                    <div
                      onClick={[Function]}
                    >
                      <div
                        key="0"
                      >
                        <styled.div
                          completed={false}
                          paused={false}
                          style={
                            Object {
                              "WebkitTransform": "translateX(0px)",
                              "transform": "translateX(0px)",
                            }
                          }
                        >
                          <div
                            className="c11"
                            style={
                              Object {
                                "WebkitTransform": "translateX(0px)",
                                "transform": "translateX(0px)",
                              }
                            }
                          >
                            <styled.h3>
                              <h3
                                className="c12"
                              >
                                Test Nag 1
                              </h3>
                            </styled.h3>
                            <div>
                              <styled.p>
                                <p
                                  className="c13"
                                >
                                  in 
                                  48 years
                                </p>
                              </styled.p>
                              <styled.p>
                                <p
                                  className="c14"
                                >
                                  <span>
                                    and repeat every 
                                    1 minute
                                  </span>
                                </p>
                              </styled.p>
                            </div>
                            <styled.div
                              style={
                                Object {
                                  "width": "2526655556.85%",
                                }
                              }
                            >
                              <div
                                className="c15"
                                style={
                                  Object {
                                    "width": "2526655556.85%",
                                  }
                                }
                              />
                            </styled.div>
                          </div>
                        </styled.div>
                      </div>
                      <div
                        key="1"
                      >
                        <styled.div
                          style={
                            Object {
                              "WebkitTransform": "translate(0px, -50%)",
                              "transform": "translate(0px, -50%)",
                            }
                          }
                        >
                          <div
                            className="c16"
                            style={
                              Object {
                                "WebkitTransform": "translate(0px, -50%)",
                                "transform": "translate(0px, -50%)",
                              }
                            }
                          >
                            <Component
                              circle={true}
                              onClick={[Function]}
                              title="Edit"
                            >
                              <styled.button
                                circle={true}
                                onClick={[Function]}
                                title="Edit"
                              >
                                <button
                                  className="c17"
                                  onClick={[Function]}
                                  title="Edit"
                                >
                                  <Component
                                    edit={true}
                                  >
                                    <styled.i
                                      edit={true}
                                    >
                                      <i
                                        className="c18"
                                      />
                                    </styled.i>
                                  </Component>
                                </button>
                              </styled.button>
                            </Component>
                          </div>
                        </styled.div>
                      </div>
                      <div
                        key="2"
                      >
                        <styled.div
                          style={
                            Object {
                              "WebkitTransform": "translate(0px, -50%)",
                              "transform": "translate(0px, -50%)",
                            }
                          }
                        >
                          <div
                            className="c19"
                            style={
                              Object {
                                "WebkitTransform": "translate(0px, -50%)",
                                "transform": "translate(0px, -50%)",
                              }
                            }
                          >
                            <Component
                              circle={true}
                              onClick={[Function]}
                              title="Delete"
                            >
                              <styled.button
                                circle={true}
                                onClick={[Function]}
                                title="Delete"
                              >
                                <button
                                  className="c17"
                                  onClick={[Function]}
                                  title="Delete"
                                >
                                  <Component
                                    delete={true}
                                  >
                                    <styled.i
                                      delete={true}
                                    >
                                      <i
                                        className="c20"
                                      />
                                    </styled.i>
                                  </Component>
                                </button>
                              </styled.button>
                            </Component>
                          </div>
                        </styled.div>
                      </div>
                      <div
                        key="3"
                      >
                        <styled.div
                          style={
                            Object {
                              "WebkitTransform": "translate(0px, -50%)",
                              "transform": "translate(0px, -50%)",
                            }
                          }
                        >
                          <div
                            className="c21"
                            style={
                              Object {
                                "WebkitTransform": "translate(0px, -50%)",
                                "transform": "translate(0px, -50%)",
                              }
                            }
                          >
                            <Component
                              circle={true}
                              onClick={[Function]}
                              title="Pause"
                            >
                              <styled.button
                                circle={true}
                                onClick={[Function]}
                                title="Pause"
                              >
                                <button
                                  className="c17"
                                  onClick={[Function]}
                                  title="Pause"
                                >
                                  <Component
                                    pause={true}
                                  >
                                    <styled.i
                                      pause={true}
                                    >
                                      <i
                                        className="c22"
                                      />
                                    </styled.i>
                                  </Component>
                                </button>
                              </styled.button>
                            </Component>
                          </div>
                        </styled.div>
                      </div>
                    </div>
                  </StaggeredMotion>
                </Nag>
              </li>
            </styled.li>
            <styled.li
              key="2"
              style={
                Object {
                  "WebkitTransform": "translateY(100px)",
                  "transform": "translateY(100px)",
                }
              }
            >
              <li
                className="c10"
                style={
                  Object {
                    "WebkitTransform": "translateY(100px)",
                    "transform": "translateY(100px)",
                  }
                }
              >
                <Nag
                  nag={
                    Object {
                      "createdAt": 1234567890,
                      "firstNag": 1234567890,
                      "id": 2,
                      "nextNag": 1234567890,
                      "repeats": "10 min",
                      "status": "PAUSED",
                      "title": "Test Nag 2",
                    }
                  }
                  nagDelete={[Function]}
                  nagEdit={[Function]}
                  nagPause={[Function]}
                  nagResume={[Function]}
                  nagStatusUpdate={[Function]}
                >
                  <StaggeredMotion
                    defaultStyles={
                      Array [
                        Object {
                          "t": 0,
                        },
                        Object {
                          "t": 0,
                        },
                        Object {
                          "t": 0,
                        },
                        Object {
                          "t": 0,
                        },
                      ]
                    }
                    styles={[Function]}
                  >
                    <div
                      onClick={[Function]}
                    >
                      <div
                        key="0"
                      >
                        <styled.div
                          completed={false}
                          paused={true}
                          style={
                            Object {
                              "WebkitTransform": "translateX(0px)",
                              "transform": "translateX(0px)",
                            }
                          }
                        >
                          <div
                            className="c23"
                            style={
                              Object {
                                "WebkitTransform": "translateX(0px)",
                                "transform": "translateX(0px)",
                              }
                            }
                          >
                            <styled.h3>
                              <h3
                                className="c12"
                              >
                                Test Nag 2
                              </h3>
                            </styled.h3>
                            <styled.p>
                              <p
                                className="c24"
                              >
                                Paused
                              </p>
                            </styled.p>
                          </div>
                        </styled.div>
                      </div>
                      <div
                        key="1"
                      >
                        <styled.div
                          style={
                            Object {
                              "WebkitTransform": "translate(0px, -50%)",
                              "transform": "translate(0px, -50%)",
                            }
                          }
                        >
                          <div
                            className="c16"
                            style={
                              Object {
                                "WebkitTransform": "translate(0px, -50%)",
                                "transform": "translate(0px, -50%)",
                              }
                            }
                          >
                            <Component
                              circle={true}
                              onClick={[Function]}
                              title="Edit"
                            >
                              <styled.button
                                circle={true}
                                onClick={[Function]}
                                title="Edit"
                              >
                                <button
                                  className="c17"
                                  onClick={[Function]}
                                  title="Edit"
                                >
                                  <Component
                                    edit={true}
                                  >
                                    <styled.i
                                      edit={true}
                                    >
                                      <i
                                        className="c18"
                                      />
                                    </styled.i>
                                  </Component>
                                </button>
                              </styled.button>
                            </Component>
                          </div>
                        </styled.div>
                      </div>
                      <div
                        key="2"
                      >
                        <styled.div
                          style={
                            Object {
                              "WebkitTransform": "translate(0px, -50%)",
                              "transform": "translate(0px, -50%)",
                            }
                          }
                        >
                          <div
                            className="c19"
                            style={
                              Object {
                                "WebkitTransform": "translate(0px, -50%)",
                                "transform": "translate(0px, -50%)",
                              }
                            }
                          >
                            <Component
                              circle={true}
                              onClick={[Function]}
                              title="Delete"
                            >
                              <styled.button
                                circle={true}
                                onClick={[Function]}
                                title="Delete"
                              >
                                <button
                                  className="c17"
                                  onClick={[Function]}
                                  title="Delete"
                                >
                                  <Component
                                    delete={true}
                                  >
                                    <styled.i
                                      delete={true}
                                    >
                                      <i
                                        className="c20"
                                      />
                                    </styled.i>
                                  </Component>
                                </button>
                              </styled.button>
                            </Component>
                          </div>
                        </styled.div>
                      </div>
                      <div
                        key="3"
                      >
                        <styled.div
                          style={
                            Object {
                              "WebkitTransform": "translate(0px, -50%)",
                              "transform": "translate(0px, -50%)",
                            }
                          }
                        >
                          <div
                            className="c21"
                            style={
                              Object {
                                "WebkitTransform": "translate(0px, -50%)",
                                "transform": "translate(0px, -50%)",
                              }
                            }
                          >
                            <Component
                              circle={true}
                              onClick={[Function]}
                              title="Resume"
                            >
                              <styled.button
                                circle={true}
                                onClick={[Function]}
                                title="Resume"
                              >
                                <button
                                  className="c17"
                                  onClick={[Function]}
                                  title="Resume"
                                >
                                  <Component
                                    resume={true}
                                  >
                                    <styled.i
                                      resume={true}
                                    >
                                      <i
                                        className="c25"
                                      />
                                    </styled.i>
                                  </Component>
                                </button>
                              </styled.button>
                            </Component>
                          </div>
                        </styled.div>
                      </div>
                    </div>
                  </StaggeredMotion>
                </Nag>
              </li>
            </styled.li>
          </ul>
        </styled.ul>
      </StaggeredMotion>
    </div>
  </Nags>
</Provider>
`;
